--- a/css/global.css
+++ b/css/global.css
@@ -97,6 +97,45 @@ a{
 }
 
 /*footer*/
+.subscribe-img{
+  width: 100%;
+  filter: brightness(70%);
+}
+
 .subscribe{
-  background-image: url(../images/subscribe.jpg);
+  bottom: 380px;
+  position: relative;
+  left: 6%;
+  color: white;
+  font-size: 40px;
+  width: 65%;
+  margin: 0px auto;
+}
+#email{
+  text-align: center;
+  bottom: 300px;
+  position: relative;
+  left: 33%;
+  font-size: 40px;
+  background-color: rgba(255,255,255,0.5);
+  border: 3px solid white;
+}
+
+::placeholder{
+  color: white;
+  opacity: 1; 
+  font-family: 'Average', serif;
+  font-size: 30px;
+}
+
+.subscribe-button{
+  color: white;
+  font-family: 'Average', serif;
+  font-size: 30px;
+  background-color: transparent;
+  bottom: 220px;
+  position: relative;
+  left: 56px;
+  border: 3px solid white;
+  padding: 10px 80px;
 }
