--- a/css/media.css
+++ b/css/media.css
@@ -14,7 +14,7 @@
     display: none;
   }
   nav{
-    position: relative;
+    position: absolute;
     background-color: transparent;
     display: flex;
     flex-direction: row;
