--- a/css/media.css
+++ b/css/media.css
@@ -25,4 +25,54 @@
   .hamburger{
     display: none;
   }
+
+}
+
+@media (max-width:700px){
+  .slogan, .theme {
+    font-size: 30px;
+    top: -639px;
+  }
+  .heading{
+    font-size: 25px;
+    margin-left: 72px;
+  }
+
+
+
+  .header{
+    flex-direction: column;
+    justify-content: initial;
+  }
+
+  #hamburger-menu:checked ~ nav {
+    display: block;
+    position: inherit;
+    padding-bottom: 10px;
+  }
+
+  .contact-about-link{
+    position: revert;
+  }
+
+
+
+
+  .posts-list{
+    top: -600px;
+    display: block;
+    margin: 0px;
+  }
+
+  .post-container {
+  
+      width: 100%;
+      margin-bottom: 72px;
+      margin-left: 0px;
+  
+  }
+
+  .post-img {
+    height: 100%;
+  }
 }
