--- a/css/global.css
+++ b/css/global.css
@@ -76,7 +76,7 @@ body{
 .contact-about-link{
   position: absolute;
   top: 25px;
-  right: 60px;
+  left: 320px;
   font-size: 17px;
 }
 
@@ -134,6 +134,9 @@ a{
   width: 65%;
   margin: 0px auto;
 }
+
+
+
 #email{
   text-align: center;
   position: relative;
@@ -148,6 +151,9 @@ a{
   font-family: 'Average', serif;
   font-size: 30px;
 }
+
+
+
 .button-subscribe{
   color: white;
   font-family: 'Average', serif;
@@ -179,3 +185,4 @@ a{
   bottom: 130px;
   position: relative;
 }
+
