--- a/css/media.css
+++ b/css/media.css
@@ -75,4 +75,55 @@
   .post-img {
     height: 100%;
   }
+
+  .a-posts{
+    width: 100%;
+  }
+
+
+ .subscribe{
+  bottom: 115px;
+  font-size: 14px;
+ }
+
+ #email{
+  left: 0%;
+  font-size: 17px;
+  border: 1px solid rgb(255, 255, 255);
+ }
+
+ input::placeholder{
+  font-size: 10px;
+ }
+
+ .label-subscribe{
+  justify-content: center;
+  display: grid;
+ }
+
+ .subscribeForm{
+  top: 25px;
+}
+
+.button-subscribe{
+  font-size: 10px;
+  bottom: 128px;
+  left: 128px;
+  border: 1px solid white;
+  padding: 6px 40px;
+  margin-top: 6px;
+}
+
+.links{
+  margin: 0px;
+  font-size: 14px;
+  top: -60px;
+  position: relative;
+}
+
+.copyright{
+  font-size: 10px;
+  margin-top: 20px;
+}
+
 }
