--- a/css/global.css
+++ b/css/global.css
@@ -128,11 +128,12 @@ a{
 .subscribe{
   bottom: 380px;
   position: relative;
-  left: 6%;
   color: white;
   font-size: 40px;
   width: 65%;
   margin: 0px auto;
+  justify-content: center;
+  display: grid;
 }
 
 
@@ -140,7 +141,6 @@ a{
 #email{
   text-align: center;
   position: relative;
-  left: 33%;
   font-size: 40px;
   background-color: rgba(255,255,255,0.5);
   border: 3px solid rgb(255, 255, 255);
@@ -155,13 +155,14 @@ a{
 
 
 .button-subscribe{
+  display: flex;
+  margin: 0px auto;
   color: white;
   font-family: 'Average', serif;
   font-size: 30px;
   background-color: transparent;
   bottom: 90px;
   position: relative;
-  left: 498px;
   border: 3px solid white;
   padding: 10px 80px;
 }
@@ -184,5 +185,7 @@ a{
 .label-subscribe {
   bottom: 130px;
   position: relative;
+  display: grid;
+justify-content: center;
 }
 
