--- a/css/posts.css
+++ b/css/posts.css
@@ -20,7 +20,7 @@
   background-repeat: no-repeat;
   width: 100%;
   filter: brightness(70%);
-  background-size: contain;
+  background-size: cover;
   height: 627px;
 }
 
