--- a/css/global.css
+++ b/css/global.css
@@ -176,6 +176,7 @@ a{
   font-size: 1.2rem;
   margin-top: 2px;
   text-align: center;
+  margin-bottom: -11px;
 }
 .subscribeForm {
   bottom: 200px;
