--- a/css/media.css
+++ b/css/media.css
@@ -83,15 +83,16 @@
   .a-posts{
     width: 100%;
   }
-
+.subscribe-img{
+  height: 160px;
+}
 
  .subscribe{
-  bottom: 115px;
+  bottom: 140px;
   font-size: 14px;
  }
 
  #email{
-  left: 0%;
   font-size: 17px;
   border: 1px solid rgb(255, 255, 255);
  }
@@ -103,6 +104,12 @@
  .label-subscribe{
   justify-content: center;
   display: grid;
+  bottom: 145px;
+ }
+
+ .form-error{
+  font-size: 14px;
+  margin-bottom: -16px;
  }
 
  .subscribeForm{
@@ -117,6 +124,7 @@
   border: 1px solid white;
   padding: 6px 40px;
   margin-top: 6px;
+  
 }
 
 .links{
