--- a/css/contact.css
+++ b/css/contact.css
@@ -24,25 +24,43 @@
   font-size: 18px;
 }
 
+.contact-and-picture{
+  display: flex;
+}
 
 
 #contactForm {
   padding: 2em;
+  margin-top: -215px;
+  width: 50%;
   }
 
-input {
-  width: 35%;
+.input-contact {
+  width: 80%;
   margin-top: 5px;
   padding: 10px;
   font-size: 16px;
 }
-button {
-  background: rgb(244, 244, 244);
+.contact-img-hand {
+  width: 50%;
+  margin-top: -150px;
+}
+
+.img-hand {
+  width: 70%;
+  height: 84%;
+  filter: brightness(111%);
+  left: 10%;
+  position: relative;
+
+}
+.button-submit {
+
   border: solid 1px #a2a2a2;
   width: 200px;
   padding: 1rem;
   color: black;
-  margin-top: 10px;
+  margin-top: 45px;
   cursor: pointer;
   border-radius: 0.2rem;
 }
@@ -73,10 +91,11 @@ label p{
   color: red;
   font-size: 0.9rem;
   margin-top: 2px;
+  text-align: left;
 }
 
 #message {
-  padding: 10px 50px 60px 10px;
+  padding-bottom: 90px;
 }
 
   form button{
@@ -84,3 +103,6 @@ label p{
     position: relative;
   }
 
+.footer-contact{
+  margin-top: 190px;
+}
