--- a/css/media.css
+++ b/css/media.css
@@ -138,5 +138,37 @@
   font-size: 10px;
   margin-top: 20px;
 }
+.slogan-index{
+  font-size: 20px;
+  margin-top: -68px;
+  top: auto;
+  color: white;
+  bottom: 434px;
+  position: relative;
+  text-align: center;
+}
+.tip-button{
+  font-size: 20px;
+  border: 1px solid white;
+  padding: 8px 30px;
+  left: 26%;
+  bottom: 415px;
+}
+
+.contact-text{
+  bottom: 535px;
+}
+.contact-img-hand{
+  display: none;
+}
+
+.contact-info{
+  margin: -290px 20px 20px 20px;
+}
+
+#contactForm {
+  margin-top: -460px;
+  width: 100%;
+}
 
 }
