--- a/css/index.css
+++ b/css/index.css
@@ -37,3 +37,67 @@ bottom: 400px;
   transition: 1s;
 }
 
+
+
+
+.latest-post.carousel{
+  display: flex;
+  justify-content: center;
+}
+
+.carousel-box{
+  border:  solid black 3px;
+  display: flex;
+  padding: 40px;
+  width: 10%;
+  height: 215px;
+  justify-content: center;
+  margin-bottom: 100px;
+  margin: 20px;
+}
+
+.latest-posts-carousel {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  margin-left: 90px;
+  margin-right: 50px;
+  top: -150px;
+  position: relative;
+}
+.a-posts {
+  width: 90%;
+}
+.post-img {
+  height: 325px;
+  width: 100%;
+  object-fit: cover;
+}
+.latest-posts {
+  top: -190px;
+  position: relative;
+  justify-content: center;
+  display: grid;
+  font-size: 40px;
+}
+.prev,
+.next {
+  position: absolute;
+  top: 920px;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-size: 24px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
