--- a/css/contact.css
+++ b/css/contact.css
@@ -18,8 +18,8 @@
 
 .contact-info{
   font-family: 'Average', serif;
-  top: 480px;
-  position: absolute;
+  top: -230px;
+  position: relative;
   margin-left: 35px;
   font-size: 18px;
 }
