--- a/css/posts.css
+++ b/css/posts.css
@@ -1,5 +1,8 @@
 .post-container {
-  width: 90%;
+  width: 85%;
+}
+.a-posts {
+  margin-top: 60px;
 }
 
 .post-img {
@@ -35,4 +38,22 @@
 
 .theme{
   bottom:450px ;
+}
+
+.load {
+  display: flex;
+  margin: 0px auto;
+  color: #715a30;
+  font-family: 'Average', serif;
+  font-size: 30px;
+  background-color: transparent;
+  bottom: 90px;
+  position: relative;
+  border: 3px solid #715a30;
+  padding: 10px 80px;
+}
+
+.load:hover{
+  background-color: #715a3042;
+  transition: 1s ease;
 }
