--- a/css/index.css
+++ b/css/index.css
@@ -1,25 +1,20 @@
+/*top image*/
+
+
 .top-img{
-  background-image: url(../images/top-img.jpg);
+  background-image: url(../images/index-top-img.png);
   background-repeat: no-repeat;
   width: 100%;
-  filter: brightness(70%);
   background-size: contain;
   height: 521px;
 }
-
-
-
-
 .slogan-index{
   font-size: 40px;
   color: white;
-  bottom: 434px;
+  top: 20%;
   position: relative;
   text-align: center;
 }
-
-
-
 .tip-button{
 color: white;
 font-family: 'Average', serif;
@@ -29,21 +24,15 @@ position: relative;
 border: 3px solid white;
 padding: 10px 80px;
 left: 36%;
-bottom: 400px;
+top: 35%;
 }
-
 .tip-button:hover{
   background-color: rgba(255, 255, 255, 0.37);
   transition: 1s;
 }
 
 
-
-
-.latest-post.carousel{
-  display: flex;
-  justify-content: center;
-}
+/*carousel*/
 
 .carousel-box{
   border:  solid black 3px;
@@ -55,14 +44,13 @@ bottom: 400px;
   margin-bottom: 100px;
   margin: 20px;
 }
-
 .latest-posts-carousel {
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
   margin-left: 90px;
   margin-right: 50px;
-  top: -150px;
   position: relative;
+  margin-bottom: 60px;
 }
 .a-posts {
   width: 90%;
@@ -73,31 +61,30 @@ bottom: 400px;
   object-fit: cover;
 }
 .latest-posts {
-  top: -190px;
   position: relative;
   justify-content: center;
   display: grid;
   font-size: 40px;
 }
-.prev,
-.next {
+
+/*arrows*/
+.prev, .next {
   position: absolute;
-  top: 920px;
+  top: 945px;
   transform: translateY(-50%);
   width: 50px;
   height: 50px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.44);
   color: #fff;
-  font-size: 24px;
+  font-size: 35px;
   border: none;
   outline: none;
   cursor: pointer;
+  border-radius: 26px;
 }
-
 .prev {
-  left: 0;
+  left: 65px;
 }
-
 .next {
-  right: 0;
+  right: 57px;
 }
