--- a/css/media.css
+++ b/css/media.css
@@ -30,8 +30,11 @@
 
 @media (max-width:700px){
 
-  .top-img{
+  /*Global*/
+
+ .top-img{
     background-size: contain;
+    height: 135px;
   }
   .slogan, .theme {
     font-size: 30px;
@@ -41,13 +44,12 @@
     font-size: 25px;
     margin-left: 72px;
   }
-
-
-
   .header{
     flex-direction: column;
     justify-content: initial;
   }
+
+  /*hamburger menu*/
 
   #hamburger-menu:checked ~ nav {
     display: block;
@@ -55,62 +57,96 @@
     padding-bottom: 10px;
   }
 
+  
+/*index*/
+
+.prev,
+.next{
+  display: none;
+}
+
+.latest-posts-carousel {
+  grid-template-columns: auto;
+  margin: 0px;
+  position: relative;
+}
+
+.latest-posts {
+  font-size: 25px;
+}
+.slogan-index{
+  font-size: 18px;
+}
+.tip-button{
+font-size: 13px;
+left: 15%;
+}
+
+
+
+
+/*footer*/
+
   .contact-about-link{
     position: revert;
   }
+  .links{
+    margin: 0px;
+    font-size: 14px;
+    top: -60px;
+    position: relative;
+  }
+  .copyright{
+    font-size: 10px;
+    margin-top: 20px;
+  }
 
 
-
+/*Posts*/
 
   .posts-list{
     top: -600px;
     display: block;
     margin: 0px;
   }
-
   .post-container {
   
-      width: 100%;
-      margin-bottom: 72px;
-      margin-left: 0px;
-  
+    width: 100%;
+    margin-bottom: 72px;
+    margin-left: 0px;
   }
   .a-posts{
     width: 100%;
   }
+
+/*subscribe*/
+
 .subscribe-img{
   height: 160px;
 }
-
  .subscribe{
   bottom: 140px;
   font-size: 14px;
  }
-
  #email{
   font-size: 17px;
   border: 1px solid rgb(255, 255, 255);
  }
-
  input::placeholder{
   font-size: 10px;
  }
-
  .label-subscribe{
   justify-content: center;
   display: grid;
   bottom: 145px;
  }
-
  .form-error{
   font-size: 14px;
   margin-bottom: -16px;
  }
-
  .subscribeForm{
   top: 25px;
 }
-
 .button-subscribe{
   display: initial;
   font-size: 10px;
@@ -122,34 +158,7 @@
   
 }
 
-.links{
-  margin: 0px;
-  font-size: 14px;
-  top: -60px;
-  position: relative;
-}
-
-.copyright{
-  font-size: 10px;
-  margin-top: 20px;
-}
-.slogan-index{
-  font-size: 20px;
-  margin-top: -68px;
-  top: auto;
-  color: white;
-  bottom: 434px;
-  position: relative;
-  text-align: center;
-}
-.tip-button{
-  font-size: 20px;
-  border: 1px solid white;
-  padding: 8px 30px;
-  left: 26%;
-  bottom: 415px;
-}
-
+/*contact*/
 .contact-text{
   bottom: 535px;
 }
@@ -166,6 +175,10 @@
   width: 100%;
 }
 
+
+
+/*about*/
+
 .about-text{
   bottom: 460px;
   font-size: 30px;
@@ -174,33 +187,27 @@
   bottom: 345px;
   position: relative;
 }
-
 .our-work-flex{
   margin: -345px 0px;
   flex-direction: column;
 }
-
 .our-work-text{
   width: 95%;
   margin: 0px 15px 0px 15px;
 }
-
 .our-work-img{
   height: 221px;
   margin: 15px 0px;
 }
-
 .team-flex{
   margin: 0px 0px 175px 0px;
   flex-direction: column;
   gap: 240px;
 }
-
 .our-team-img{
   width: 100%;
   margin-top: 365px;
 }
-
 .team-name {
   margin-left: 15px;
 }
@@ -209,50 +216,29 @@
   position: relative;
   margin: 0px;
 }
-
-
 .about-images{
   grid-template-columns: auto;
   margin: 0px;
   top: 440px;
   position: relative;
 }
-
 .footer-about{
   bottom: -485px;
   position: relative;
 }
+
+
+/*Tip*/
 
 .post-text {
   font-size: 15px;
   line-height: 1.5;
   margin: 0px 25px;
 }
-
 .post-heading {
   font-size: 25px;
   margin: 15px 30px 0px 30px;
   text-align: center;
-}
-
-
-/*index*/
-
-.prev,
-.next{
-  display: none;
-}
-
-.latest-posts-carousel {
-  grid-template-columns: auto;
-  margin: 0px;
-  top: -390px;
-  position: relative;
-}
-
-.latest-posts {
-  top: -385px;
-  font-size: 25px;
 }
 
 }
