--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,7 @@
 .top-img-about{
-  background-image: url(../images/about1.jpg);
+  background-image: url(../images/about-top-img.jpg);
   background-repeat: no-repeat;
   width: 100%;
-  filter: brightness(70%);
   background-size: contain;
   height: 458px;
 }
@@ -10,7 +9,7 @@
 .about-text {
   font-size: 40px;
   color: white;
-  bottom: 345px;
+  top: 30%;
   position: relative;
   text-align: center;
   font-style: italic;
@@ -19,8 +18,7 @@
 .top-text-about {
   text-align: center;
   position: initial;
-  margin-top: -90px;
-  font-size: 40px;
+    font-size: 40px;
 }
 
 .our-work-flex{
