--- a/css/media.css
+++ b/css/media.css
@@ -33,9 +33,9 @@
   /*Global*/
 
  .top-img{
-    background-size: contain;
-    height: 135px;
-width: 100%;
+  height: 135px;
+  width: 100%;
+  object-fit: cover;
   }
 
   .top-img-posts{
@@ -83,10 +83,15 @@ width: 100%;
 }
 .slogan-index{
   font-size: 18px;
+  top: 10%;
 }
 .tip-button{
 font-size: 13px;
 left: 15%;
+top: 13%;
+}
+.tip-button:active{
+  background-color: rgba(255, 255, 255, 0.37);
 }
 
 
@@ -98,13 +103,16 @@ left: 15%;
     position: revert;
   }
   .links{
-    margin: 0px;
     font-size: 14px;
-    top: -60px;
-    position: relative;
+  }
+  .links :active{
+    color: rgb(116, 116, 116);
   }
   .copyright{
     font-size: 10px;
+    margin-top: 20px;
+  }
+  .footer-contact {
     margin-top: 20px;
   }
 
@@ -125,18 +133,22 @@ left: 15%;
   .a-posts{
     width: 100%;
   }
+  .load:active{
+    background-color: #715a3042;
+  }
+  
 
 /*subscribe*/
 
 .subscribe-img{
-  height: 160px;
+  height: 190px;
 }
  .subscribe{
-  bottom: 140px;
   font-size: 14px;
+  top: 10%;
  }
  #email{
-  font-size: 17px;
+  font-size: 24px;
   border: 1px solid rgb(255, 255, 255);
  }
  input::placeholder{
@@ -145,95 +157,83 @@ left: 15%;
  .label-subscribe{
   justify-content: center;
   display: grid;
-  bottom: 145px;
+  top: -55%;
+  position: relative;
  }
  .form-error{
   font-size: 14px;
   margin-bottom: -16px;
  }
- .subscribeForm{
-  top: 25px;
-}
 .button-subscribe{
-  display: initial;
   font-size: 10px;
-  bottom: 128px;
-  left: 128px;
   border: 1px solid white;
-  padding: 6px 40px;
-  margin-top: 6px;
-  
+  top: 25%;
+}
+.button-subscribe:active{
+  background-color: rgba(255, 255, 255, 0.37);
 }
 
 /*contact*/
-.contact-text{
-  bottom: 535px;
+
+.top-img-contact{
+  width: 100%;
+  object-fit: cover;
 }
+.contact-text{
+  font-size: 30px;
+  top: 7%;
+  }
 .contact-img-hand{
   display: none;
 }
 
 .contact-info{
-  margin: -290px 20px 20px 20px;
+  margin: -260px 20px 20px 20px;
 }
 
 #contactForm {
-  margin-top: -250px;
-  width: 100%;
+    width: 100%;
+}
+.button-submit:active{
+  color: #715a30;
 }
 
 
 
 /*about*/
-
 .about-text{
-  bottom: 460px;
-  font-size: 30px;
+  top: 10%;
+  font-size: 25px;
 }
-.top-text-about{
-  bottom: 345px;
-  position: relative;
+
+.top-img-about{
+  height: 135px;
 }
 .our-work-flex{
-  margin: -345px 0px;
+  margin: 0px 20px;
   flex-direction: column;
 }
 .our-work-text{
-  width: 95%;
-  margin: 0px 15px 0px 15px;
+  width: 100%;
 }
 .our-work-img{
-  height: 221px;
-  margin: 15px 0px;
-}
-.team-flex{
-  margin: 0px 0px 175px 0px;
-  flex-direction: column;
-  gap: 240px;
-}
-.our-team-img{
-  width: 100%;
-  margin-top: 365px;
+  margin: 30px 0px;
 }
 .team-name {
-  margin-left: 15px;
+  font-size: 12px;
 }
-.top-text-team{
-  top: 345px;
-  position: relative;
-  margin: 0px;
+.team-flex{
+  margin: 0px 0px 145px 0px;
+}
+.our-team-img{
+  width: 25%;
 }
 .about-images{
-  grid-template-columns: auto;
-  margin: 0px;
-  top: 440px;
-  position: relative;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+.about-images div {
+  height: 100%;
 }
-.footer-about{
-  bottom: -485px;
-  position: relative;
-}
-
 
 /*Tip*/
 
