--- a/css/global.css
+++ b/css/global.css
@@ -2,8 +2,8 @@
 
 .hamburger {
   position: absolute;
-  left: 330px;
-  padding: 20px 20px 0px 0px;
+  right: 20px;
+  top: 20px;
 }
 nav, #hamburger-menu{
   display: none;
