--- a/css/media.css
+++ b/css/media.css
@@ -1,10 +1,6 @@
-@media (min-width:400px){
-  .hamburger{
-    display: none;
-  }
-}
 
-@media (min-width:700px) {
+
+@media (min-width:1200px) {
   /*hamburger menu*/
   nav ul{
     display: flex;
@@ -26,6 +22,13 @@
     display: none;
   }
 
+  #hamburger-menu:checked ~ nav {
+    display: block;
+    position: inherit;
+    padding-bottom: 10px;
+  }
+
+
 }
 
 @media (max-width:700px){
@@ -33,8 +36,7 @@
   /*Global*/
 
  .top-img{
-  height: 135px;
-  width: 100%;
+  height: 145px;
   object-fit: cover;
   }
 
@@ -49,19 +51,12 @@
   }
   .heading{
     font-size: 25px;
-    margin-left: 72px;
+    display: grid;
+    justify-content: center;
   }
   .header{
     flex-direction: column;
     justify-content: initial;
-  }
-
-  /*hamburger menu*/
-
-  #hamburger-menu:checked ~ nav {
-    display: block;
-    position: inherit;
-    padding-bottom: 10px;
   }
 
   
@@ -83,12 +78,16 @@
 }
 .slogan-index{
   font-size: 18px;
-  top: 10%;
+  top: 20%;
 }
 .tip-button{
 font-size: 13px;
-left: 15%;
-top: 13%;
+justify-content: center;
+display: grid;
+padding: 10px 23px;
+margin: 0px 55px;
+top: 30%;
+left: 0%;
 }
 .tip-button:active{
   background-color: rgba(255, 255, 255, 0.37);
@@ -175,20 +174,20 @@ top: 13%;
 
 /*contact*/
 
+.contact-info{
+  margin: 18px;
+}
+
 .top-img-contact{
-  width: 100%;
+  height: 145px;
   object-fit: cover;
 }
 .contact-text{
   font-size: 30px;
-  top: 7%;
+  top: 32%;
   }
 .contact-img-hand{
   display: none;
-}
-
-.contact-info{
-  margin: -260px 20px 20px 20px;
 }
 
 #contactForm {
