--- a/css/global.css
+++ b/css/global.css
@@ -86,7 +86,7 @@ a{
   font-size: 40px;
 }
 .contact-about-link .posts-link{
-  font-family: 'Average', serif;
+  /*font-family: 'Average', serif;
 }
 
 /*footer*/
