--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
   height: 521px;
 }
 .slogan-index{
-  /* font-size: 40px; */
+  font-size: 40px;
   color: white;
   top: 20%;
   position: relative;
